refactor of tests for truffle@4 - remove sync functions from tests - prevent potential for duplication in investorAddresses - checkEligibility => getAvailableAllocation

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "solc": "0.4.13",
     "zeppelin-solidity": "^1.1.0"
+  },
+  "devDependencies": {
+    "bluebird": "^3.5.0"
   }
 }
