--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "zeppelin-solidity": "^1.1.0"
   },
   "devDependencies": {
-    "bluebird": "^3.5.0"
+    "bluebird": "^3.5.0",
+    "eslint": "^4.8.0",
+    "eslint-config-airbnb": "^16.0.0",
+    "eslint-config-airbnb-base": "^12.0.2",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2"
   }
 }
