--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {},
   "dependencies": {
     "eslint-plugin-react": "^7.5.1",
+    "numeral": "^2.0.6",
     "solc": "0.4.13",
     "zeppelin-solidity": "^1.1.0"
   },
